--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "php": ">=5.3.0",
         "pengarwin/double-entry-bundle": "dev-develop",
-        "whiteoctober/breadcrumbs-bundle": "dev-master"
+        "whiteoctober/breadcrumbs-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "autoload": {
         "psr-0": { "PengarWin\\CoreBundle": "" }
