--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -22,6 +22,13 @@ pengarwin_vendor_edit:
          _format: (html|json)
 
 
+pengarwin_journal_edit:
+    path:      /journal/{id}/edit
+    defaults:  { _controller: PengarWinCoreBundle:Journal:edit }
+    methods:   [GET,POST]
+    requirements:
+        id: \d+
+
 pengarwin_journal_post:
     path:      /accounts/{path}/post-journal/{id}
     defaults:  { _controller: PengarWinCoreBundle:Journal:post }
