--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "pengarwin/core-bundle",
     "require": {
         "php": ">=5.3.0",
-        "pengarwin/double-entry-bundle": "dev-develop",
+        "pengarwin/double-entry-bundle": "~0.8",
         "whiteoctober/breadcrumbs-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "~2.0@dev"
     },
