--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "pengarwin/core-bundle",
+    "name": "phospr/core-bundle",
     "require": {
         "php": ">=5.3.0",
-        "pengarwin/double-entry-bundle": "~0.8",
+        "phospr/double-entry-bundle": "~0.8",
         "whiteoctober/breadcrumbs-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "autoload": {
-        "psr-0": { "PengarWin\\CoreBundle": "" }
+        "psr-0": { "Phospr\\CoreBundle": "" }
     },
-    "target-dir": "PengarWin/CoreBundle",
+    "target-dir": "Phospr/CoreBundle",
     "license": "MIT"
 }
